# ai-receptionist-mvp

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  models.py
app/api/routes/: calendar.py  dashboard.py  leads.py  twilio.py  vapi.py
app/receptionist/: __init__.py  agent.py
app/receptionist/prompts/: system.md
app/services/: __init__.py  calendar_service.py  email_service.py  lead_extractor.py  lead_store.py  openai_service.py  twilio_service.py  vapi_service.py
samples/: vapi_webhook.json
scripts/: run_local.ps1  setup_env.ps1
tests/: test_calendar_service.py  test_dashboard.py  test_email_service.py  test_lead_extractor.py  test_leads.py
